# World-Magnetic-Model-Report-Generator

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  WMMv2.py  build.py  main.py  notes.txt  pyproject.toml  reportWMM.py  requirements.txt  test.xlsx  xlsgen.py
.github/workflows/: build_beta.yml  build_windows.yml
data/: WMM.COF
gui/: wmm_gui.py
src/: wmm_v2.py
src/models/: wmm_model.py
src/report_generation/: report.py  xlsgen.py
src/services/: excel_generator.py  wmm_calculator.py
src/utils/: date_utils.py
src/wmm/: constants.py  model_reader.py  wmm_model.py  wmm_v2.py
src/wmm_core/: model.py
