[tool.poetry]
name = "world-magnetic-model-report-generator"
version = "0.1.0"
description = "A python approach to the generation of a spreadsheet report of WMM"
authors = ["Douglas Rojas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
numpy = "^2.0.0"
openpyxl = "^3.1.5"
pyqt6 = "6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
